interpreter/tests/test_files/neg/bad_storeU.s
    storeU stk 1 1
    halt
